--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h6 class="logo me-auto"><a href="index.html">Albertina Sisulu Primary School</a></h6>
+      <h3  style="color: #1977cc; font:bold " href="index.html">Albertina Sisulu Primary School</h3>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
