--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ from January to November. There will be no after-care or afternoon program offer
       </div>
     </section><!-- End Departments Section -->
 
-    <!-- ======= Doctors Section ======= -->
+    <!-- ======= Teachers Section ======= -->
     <section id="doctors" class="doctors">
       <div class="container">
 
