--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@ from January to November. There will be no after-care or afternoon program offer
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/doctors/doctors-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4></h4>
-                <span>Teacher</span>
+                <h4>Mrs Nkabinde</h4>
+                <span>Deputy Principal</span>
                 <p>We learn by teaching the kids, they teach more than they learn. With the likes of computers we introduce them to coding and robotics</p>
               </div>
             </div>
@@ -435,8 +435,8 @@ from January to November. There will be no after-care or afternoon program offer
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/doctors/doctors-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Kunene</h4>
-                <span>Teacher</span>
+                <h4>Mrs Malibane</h4>
+                <span>HOD</span>
                 <p>We love kids and teaching. The teachers may open the door, but its up to you to enter the door of your future.</p>
               </div>
             </div>
@@ -446,8 +446,8 @@ from January to November. There will be no after-care or afternoon program offer
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/doctors/doctors-4.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Thomas Dlamini</h4>
-                <span>Teacher</span>
+                <h4>Mrs Mkhwanazi</h4>
+                <span>Deputy Principal</span>
                 <p>Leaders are readers, we strive to build the next future writers and readers.</p>
               </div>
             </div>
