--- a/index.html
+++ b/index.html
@@ -413,9 +413,9 @@ from January to November. There will be no after-care or afternoon program offer
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Mr S DYWILI</h4>
+                <h4>Mr S Dywili</h4>
                 <span>Principal</span>
-                <p>Learn, Unlearn and Relearn</p>
+                <p>First Things First</p>
               </div>
             </div>
           </div>
